Little break, fresh start.

--- a/scratch/test.html
+++ b/scratch/test.html
@@ -11,11 +11,12 @@
     Flippy card:
 
     <div class="flip-card">
-        <div class="flip-card-inner">
-          <div class="flip-card-front">
+        <div class="flip-card--inner">
+          <div class="flip-card__front parent">
+              <h4 class="ribbon">FEATURED</h4>
             <img src="https://placedog.net/300/300" alt="Avatar" style="width:300px;height:300px;">
           </div>
-          <div class="flip-card-back">
+          <div class="flip-card__back parent">
             <h1>Good Dogs, Inc.</h1> 
             <p>Dogs-R-Us</p> 
             <p>We Like Treats!</p>
